--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 **.DS_Store
 _site/
 vendor/
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
