--- a/_config.yml
+++ b/_config.yml
@@ -163,7 +163,7 @@ defaults:
       type: teaching
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: false
 
 # Sass/SCSS
